# diffaux

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml  requirements.txt
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  build-documentation.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
_results/gh-runner/: 006071fa-virtualenv-py3.10-Cython-build-packaging.json  006071fa-virtualenv-py3.12-Cython-build-packaging.json  0415c523-virtualenv-py3.12-Cython-build-packaging.json  06742c5c-virtualenv-py3.12-Cython-build-packaging.json  073f3559-virtualenv-py3.12-Cython-build-packaging.json  08277308-virtualenv-py3.12-Cython-build-packaging.json  099cbd63-virtualenv-py3.12-Cython-build-packaging.json  09a88827-virtualenv-py3.12-Cython-build-packaging.json  0b91ae00-virtualenv-py3.12-Cython-build-packaging.json  0d18962c-virtualenv-py3.12-Cython-build-packaging.json  0e069dae-virtualenv-py3.12-Cython-build-packaging.json  0e4470ec-virtualenv-py3.10-Cython-build-packaging.json  0e4470ec-virtualenv-py3.12-Cython-build-packaging.json  10bb5e83-virtualenv-py3.12-Cython-build-packaging.json  144c4712-virtualenv-py3.12-Cython-build-packaging.json  162e20c0-virtualenv-py3.12-Cython-build-packaging.json  1647fa32-virtualenv-py3.12-Cython-build-packaging.json  16bee8e6-virtualenv-py3.12-Cython-build-packaging.json  18a2bd8d-virtualenv-py3.12-Cython-build-packaging.json  18a2fc25-virtualenv-py3.10-Cython-build-packaging.json  18a2fc25-virtualenv-py3.12-Cython-build-packaging.json  1ac73c70-virtualenv-py3.10-Cython-build-packaging.json  1ac73c70-virtualenv-py3.12-Cython-build-packaging.json  1bf78def-virtualenv-py3.12-Cython-build-packaging.json  1eb9b63f-virtualenv-py3.12-Cython-build-packaging.json  1fff8905-virtualenv-py3.12-Cython-build-packaging.json  21f3ff0b-virtualenv-py3.10-Cython-build-packaging.json  21f3ff0b-virtualenv-py3.12-Cython-build-packaging.json  282b26c4-virtualenv-py3.12-Cython-build-packaging.json  (+187 more)
benchmarks/: asv.conf.json  benchmarks.py
conda/: diffaux_env.yml  env_requirements.txt
diffaux/: GalaxySizes.py  GalaxySizes.py~
docs/: conf.py  index.rst
notebooks/: B_over_T.ipynb  Bulge_disk.ipynb  Diffaux_demo.ipynb  DoubleSigmoidExample.ipynb  F_bulge.ipynb  Fbulge_Modeling.ipynb  Fbulge_parameter_tune.ipynb  GalaxySizes.ipynb  Generate_Fbulge_pars.ipynb  MC_gals_cens_SFH_SMH.ipynb  Size_vs_Mstar2_fits.ipynb  Size_vs_Mstar_fits.ipynb  Test_New_Fbulge_Model.ipynb  Test_bh.ipynb  Test_diffaux.ipynb  Test_diffsky.ipynb  Test_diskbulge_size.ipynb
(+62 files in other folders)
